# ds

./: .gitignore  Decision Tree.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  chap3.ipynb  chap4.ipynb  chap5.ipynb  chap9.ipynb  pyproject.toml
NLA/: nla1.ipynb
chap3/: chap3.py
ds/: chap10.ipynb  chap6.ipynb  chap7.ipynb  chap8.ipynb
ds/NLA/: gin_yoru.txt
ds/chap3/: chap3.ipynb.json
ds/ds_samplefiles/: AnswerChapter10.ipynb  AnswerChapter6.ipynb  AnswerChapter8.ipynb  Chapter2.ipynb  Chapter3.ipynb  Chapter5.ipynb  Chapter6.ipynb  Chapter8.ipynb
ds/ds_samplefiles/.ipynb_checkpoints/: Chapter8-checkpoint.ipynb
ds_samplefiles/: AnswerChapter4.ipynb  AnswerChapter5.ipynb  AnswerChapter7.ipynb  AnswerChapter8.ipynb  AnswerChapter9.ipynb  Chapter10.ipynb  Chapter4.ipynb  Chapter7.ipynb  Chapter9.ipynb
