[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["Shingo Watanabe <60470162+Last-Vega@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
